// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Tests  renders in a component 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={100}
    selectable={false}
    style={
      [
        {
          "color": "#000000",
          "fontSize": 100,
        },
        {},
        {
          "fontFamily": "BrightlayerUIIcons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={100}
    style={
      [
        {
          "color": "#000000",
        },
        {
          "writingDirection": "ltr",
        },
        {},
        {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        {},
        undefined,
        [
          {
            "marginTop": 32,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Test
  </Text>
</View>
`;

exports[`Icon Tests  renders with blui object source 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  selectable={false}
  style={
    [
      {
        "color": "#000000",
        "fontSize": 24,
      },
      {},
      {
        "fontFamily": "BrightlayerUIIcons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  
</Text>
`;

exports[`Icon Tests  renders with emoji source 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  style={
    [
      {
        "color": "#000000",
      },
      {
        "writingDirection": "ltr",
      },
      {},
      {
        "fontFamily": "System",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": 0,
      },
      {},
      undefined,
      [
        {
          "color": "#000000",
          "fontSize": 24,
        },
      ],
    ]
  }
>
  🍇
</Text>
`;

exports[`Icon Tests  renders with function source 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={
    [
      {
        "color": "#000000",
        "fontSize": 24,
      },
      undefined,
      {
        "fontFamily": "BrightlayerUIIcons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  
</Text>
`;

exports[`Icon Tests  renders with local image source 1`] = `null`;

exports[`Icon Tests  renders with material community object source 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  selectable={false}
  style={
    [
      {
        "color": "#000000",
        "fontSize": 24,
      },
      {},
      {
        "fontFamily": "Material Design Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  󰄫
</Text>
`;

exports[`Icon Tests  renders with material object source 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  selectable={false}
  style={
    [
      {
        "color": "#000000",
        "fontSize": 24,
      },
      {},
      {
        "fontFamily": "Material Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  
</Text>
`;

exports[`Icon Tests  renders with material object source 2`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  selectable={false}
  style={
    [
      {
        "color": "#000000",
        "fontSize": 24,
      },
      {},
      {
        "fontFamily": "Material Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  
</Text>
`;

exports[`Icon Tests  renders with remote image source 1`] = `
<Image
  accessibilityElementsHidden={true}
  importantForAccessibility="no-hide-descendants"
  source={
    {
      "uri": "https://raw.githubusercontent.com/etn-ccis/blui-icons/dev/png/png48/account_settings_black500_48dp.png",
    }
  }
  style={
    [
      {
        "height": 24,
        "resizeMode": "contain",
        "width": 24,
      },
    ]
  }
/>
`;

exports[`Icon Tests  renders with string source 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  style={
    [
      {
        "color": "#000000",
      },
      {
        "writingDirection": "ltr",
      },
      {},
      {
        "fontFamily": "System",
        "fontSize": 16,
        "fontWeight": "400",
        "letterSpacing": 0,
      },
      {},
      undefined,
      [
        {
          "color": "#000000",
          "fontSize": 24,
        },
      ],
    ]
  }
>
  String
</Text>
`;

exports[`Icon Tests  renders with wrapped source 1`] = `<View />`;
